# IG3A-Math-Project

./: CMakeLists.txt  README.md
report/: .gitignore  beamerthemesharelatex.sty  main.tex
sources/: .gitignore  Algorithm.cpp  Algorithm.h  CMakeLists.txt  Point.h  README.md  constants.h  main.cpp  main.h  makefile  tools.cpp
